traefik-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-ns
spec:
  selector:
    app: nginx
  ports:
    - port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: nginx-ns
spec:
  parentRefs:
    - name: traefik-gateway 
      namespace: traefik
  hostnames:
    - "nginx.k8s.lcl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: traefik
#   namespace: traefik
# spec:
#   allocateLoadBalancerNodePorts: true
#   clusterIP: 10.96.12.196
#   clusterIPs:
#   - 10.96.12.196
#   externalTrafficPolicy: Cluster
#   internalTrafficPolicy: Cluster
#   ipFamilies:
#   - IPv4
#   ipFamilyPolicy: SingleStack
#   ports:
#   - name: web
#     nodePort: 30000
#     port: 80
#     protocol: TCP
#     targetPort: web
#   - name: websecure
#     nodePort: 30001
#     port: 443
#     protocol: TCP
#     targetPort: websecure
#   selector:
#     app.kubernetes.io/instance: traefik-traefik
#     app.kubernetes.io/name: traefik
#   sessionAffinity: None
#   type: LoadBalancer
